docker/my-development-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: fastapi
        image: richdatadock/kubefastapitry:latest
        ports:
        - containerPort: 8000
      - name: mysql
        image: datascientest/mysql-k8s:1.0.0
        ports:
        - containerPort: 3306
