docker/my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eval-ingress
spec:
  defaultBackend:
    service:
      name: eval-service
      port:
        number: 8000
